--- a/package.json
+++ b/package.json
@@ -7,19 +7,26 @@
     "client-install": "npm install --prefix client",
     "start": "node server.js",
     "server": "nodemon server.js",
-    "client": "cd client  && npm start",
+    "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "brad  traversy",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.19.2",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^3.6.0",
+    "config": "^3.3.7",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.6",
+    "path": "^0.12.7",
     "react-transition-group": "^4.4.2",
-    "uuid": "^8.3.2"
+    "stream": "^0.0.2",
+    "util": "^0.12.4",
+    "uuid": "^8.3.2",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
